<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data></data>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_centerInParent="true">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="10"
        android:layout_marginTop="10dp"
        android:hint="@string/mobile"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:hint="@string/address"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight=".5"
        android:layout_marginEnd="5dp"
        android:text="@string/save"/>

    <Button
        android:id="@+id/listButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:text="@string/list"/>

    </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/linearTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:background="@drawable/cell_shape"
                android:layout_weight=".2"
                android:text="@string/first_name"/>

            <TextView
                android:id="@+id/textViewLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/cell_shape"
                android:layout_weight=".2"
                android:textColor="@color/black"
                android:text="@string/last_name"/>

            <TextView
                android:id="@+id/textViewMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/cell_shape"
                android:layout_weight=".2"
                android:textColor="@color/black"
                android:text="@string/mobile"/>

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/cell_shape"
                android:layout_weight=".2"
                android:textColor="@color/black"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/textViewAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/cell_shape"
                android:layout_weight=".2"
                android:text="@string/action"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/backButton"
            android:layout_below="@+id/linearTableRow"/>

        <TextView
            android:id="@+id/textViewNoRecordFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:text="@string/no_record_found"/>

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/back"/>

    </RelativeLayout>

</RelativeLayout>
</layout>