<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data></data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="11sp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/cell_shape"
        android:layout_weight=".2"
        tools:text="@string/first_name"/>

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="11sp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/cell_shape"
        android:layout_weight=".2"
        tools:text="@string/last_name"/>

    <TextView
        android:id="@+id/textViewMobile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="11sp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/cell_shape"
        android:layout_weight=".2"
        tools:text="@string/mobile"/>

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="11sp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/cell_shape"
        android:layout_weight=".2"
        tools:text="@string/address"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cell_shape"
        android:layout_weight=".2">

        <ImageView
            android:id="@+id/imgRemove"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            android:padding="3dp"
            android:src="@drawable/remove" />
    </RelativeLayout>

</LinearLayout>
</layout>